# rust-playground

lmat/: Cargo.toml  simulator.sh
lmat/src/: main.rs
macros_playground/: Cargo.toml
macros_playground/src/: main.rs
render/: .gitignore  readme.md  run.sh
render/src/: main.rs
sorting/src/: main.rs
webservice/: Cargo.toml  README.md
webservice/src/: config.rs  error.rs  main.rs  state.rs
webservice/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
webservice/src/handlers/: auth.rs  mod.rs  urls.rs
webservice/src/models/: mod.rs  url.rs  user.rs
